Sat Jun  5 11:00:48 2010  Tanaka Akira  <akr@fsij.org>

	* error.c (rb_name_err_mesg_new): guard mesg, recv and method.
	  The problem in [ruby-dev:41464] is caused because mesg is collected.

Sat Jun  5 09:56:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (process_options): revert r25330, so that $0 can be seen
	  from required libraries by -r option.  [ruby-core:23717]

Sat Jun  5 08:30:42 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_f_test): 'W' should test writable by real uid/git,
	  not world writable.   [ruby-core:30587]

Fri Jun  4 10:46:33 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/cfunc.c (rb_dlcfunc_inspect): should taint the result.
	  [ruby-dev:41533]

Thu Jun  3 23:34:55 2010  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/lib/digest/hmac.rb: Emit a deprecation warning in
	  verbose mode and add a caution to the overview section of the
	  document. [ruby-dev:41525]

Thu Jun  3 19:33:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/cfunc.c (rb_dlcfunc_inspect): suppress warnings by
	  rb_sprintf.

	* ext/dl/cptr.c (rb_dlptr_s_malloc): suppress warnings.

Thu Jun  3 18:58:28 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (ruby_init_ext): statically linked extensions have no
	  real path.  [ruby-dev:41526]

	* vm.c (rb_vm_call_cfunc): add filepath argument.

Thu Jun  3 18:17:45 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/rake/test_win32.rb (Rake::TestWin32): update tests.
	  [ruby-core:30309]

	* test/io/nonblock/test_flush.rb (test_flush): try pipe and
	  socketpair.  [ruby-dev:41517]

Thu Jun  3 09:39:54 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/dl/dl.h (DLSTACK_TYPE): type of stack is same as VALUE.
	  reported by sakiyama shin in [ruby-dev:41514]

Thu Jun  3 06:25:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_path.rb (test_path): get rid of blocking on
	  access to non-existent host.

Tue Jun  1 23:22:59 2010  NARUSE, Yui  <naruse@ruby-lang.org>
